syntax = "proto3";

package executors.v1.execute.v1;

import "executors/v1/plan/v1/plan_ref.proto";

// ExecutePlanRequest executes a plan with the provided plan ref
message ExecutePlanRequest {
  .executors.v1.plan.v1.PlanRef plan = 1;
}

// ExecutePlanResponse returns once a plan has been executed
message ExecutePlanResponse {}
